minor ui changes (link color, sidebar buttons)

--- a/src/nasz.css
+++ b/src/nasz.css
@@ -3,6 +3,11 @@
     overflow-y: hidden;
 
    }
+   a
+  {
+    text-decoration: none;
+    color: #007044;
+  }
     body { margin: 0; padding: 0;}
     #map { position: absolute; top: 0; bottom: 0; width: 100%;}
 
