--- a/src/nasz.css
+++ b/src/nasz.css
@@ -59,6 +59,7 @@
 
   #sidebar-header {
     border: 4px solid hsl(0, 0%, 96%);
+    border-radius: 7px;
   }
 
   .has-background-green {
@@ -77,4 +78,12 @@
   .navbar-menu.is-active
   {
     background-color: #008954eb !important;
+  }
+  .mapboxgl-ctrl-attrib-inner {
+    font-size: 0.6rem !important;
+    font-weight: 100 !important;
+  }
+  .mapboxgl-ctrl.mapboxgl-ctrl-attrib
+  {
+    border-top-left-radius: 10px;
   }
