--- a/src/nasz.css
+++ b/src/nasz.css
@@ -21,6 +21,11 @@
     width: 100%;
   }
 
+  .delete
+  {
+    align-self: flex-start;
+  }
+
 
   @media (min-width: 500px) {
     .sidebar {
@@ -46,33 +51,48 @@
     }
   }
 
+
+  @media (max-width: 500px) {
+    .navbar {
+      height: 1vh;
+      padding: 0 !important;
+    }
+  }
+
   .card {
     z-index: 1;
   }
 
   #sidebar-card-image {
-    padding-left: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    max-height: 94px;
+    margin-left: 10px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    max-height: 60px;
+    padding: 0;
   }
-
+  
   #sidebar-header {
     border: 4px solid hsl(0, 0%, 96%);
     border-radius: 7px;
+    box-shadow: inset 0 0 1em #0000000c;
+  }
+
+  @media (max-width: 500px) {
+    #sidebar-header {
+      border-top: 0;
+      border-left: 0;
+      border-right: 0;
+      border-radius: 7px;
+    }
+  }
+
+  .navbar
+  {
+    box-shadow: inset 0 0 1em #0000000c;
   }
 
   .has-background-green {
     background-color: #008954eb !important;
-  }
-
-  .card-content {
-    border-left: 5px solid hsl(0, 0%, 96%);
-    border-right: 5px solid hsl(0, 0%, 96%);
-  }
-
-  .navbar {
-    border-bottom: 1px solid hsl(0, 0%, 96%);
   }
 
   .navbar-menu.is-active
