--- a/src/nasz.css
+++ b/src/nasz.css
@@ -31,11 +31,11 @@
     .sidebar {
       z-index: 1;
       margin: 0.5rem !important;
-      width: 425px;
+      width: 408px;
       border-radius: 10px;
       box-shadow: 0 .5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
       max-height: 90vh;  
-      overflow: auto !important;
+      overflow-y: auto !important;
     }
   }
 
@@ -46,8 +46,8 @@
       display: block !important;
       overflow-wrap: break-word;
       max-height: 90vh;
-      z-index: 1002 !important;
-      overflow: auto !important;
+      z-index: 2 !important;
+      overflow-y: auto !important;
     }
   }
 
@@ -71,18 +71,19 @@
     padding: 0;
   }
   
+  @media (min-width: 500px) {
   #sidebar-header {
     border: 4px solid hsl(0, 0%, 96%);
     border-radius: 7px;
     box-shadow: inset 0 0 1em #0000000c;
   }
+}
 
   @media (max-width: 500px) {
     #sidebar-header {
       border-top: 0;
       border-left: 0;
       border-right: 0;
-      border-radius: 7px;
     }
   }
 
@@ -106,4 +107,9 @@
   .mapboxgl-ctrl.mapboxgl-ctrl-attrib
   {
     border-top-left-radius: 10px;
+  }
+
+  .menu-item
+  {
+   padding-right: 7px !important;
   }
