UI fixes, icons added, navbar fixed

--- a/src/nasz.css
+++ b/src/nasz.css
@@ -24,6 +24,7 @@
 
   @media (min-width: 500px) {
     .sidebar {
+      position: absolute;
       z-index: 1;
       margin: 0.5rem !important;
       width: 425px;
@@ -31,17 +32,19 @@
       box-shadow: 0 .5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
       max-height: 90vh;
       overflow: auto !important;
+      z-index: 10 !important;
     }
   }
 
   @media (max-width: 500px) {
     .sidebar {
+      position: absolute;
       margin: 0 !important;
       width: 100vw;
       display: block !important;
       overflow-wrap: break-word;
       max-height: 90vh;
-      z-index: 1002 !important;
+      z-index: 10 !important;
       overflow: auto !important;
     }
   }
@@ -124,4 +127,8 @@
     line-height: 1;
     position: relative;
     vertical-align: middle;
+}
+
+.navbar-item, .navbar-link {
+	color: #ffffff;
 }
