--- a/src/css/main.css
+++ b/src/css/main.css
@@ -86,7 +86,7 @@
   }
 
   .footer-partners.is-white {
-    background: linear-gradient(to bottom, rgba(243, 243, 243, 0.55), rgb(243, 243, 243));
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.46), rgba(255, 255, 255, 0.94));
   }
 
   .card-content {
@@ -169,7 +169,6 @@
   bottom: 0;
   z-index: 9;
   min-height: 3.25rem;
-  box-shadow: 0 .5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
 }
 .mapboxgl-ctrl-bottom-right, .maplibregl-ctrl-bottom-right
 {
@@ -177,7 +176,7 @@
 }
 .add-button
 {
-  bottom: 68px !important;
+  bottom: 72px !important;
 }
 
 .attrib
@@ -189,6 +188,11 @@
   display: flex;
   bottom:0;
   right:0;
+}
+
+.span-partners
+{
+  letter-spacing: .03em;
 }
 
 .image-gugik {
