--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,8 +21,7 @@
     width: 100%;
   }
 
-  .delete
-  {
+  .delete {
     align-self: flex-start;
   }
 
@@ -65,13 +64,13 @@
     max-height: 60px;
     padding: 0;
   }
-  
+
   @media (min-width: 500px) {
-  #sidebar-header {
-    border: 4px solid hsl(0, 0%, 96%);
-    border-radius: 8px;
+    #sidebar-header {
+      border: 4px solid hsl(0, 0%, 96%);
+      border-radius: 8px;
+    }
   }
-}
 
   @media (max-width: 500px) {
     #sidebar-header {
@@ -134,7 +133,8 @@
     border-radius: 50px
   }
 
-  [class*=" icon"], [class^=icon] {
+  [class*=" icon"],
+  [class^=icon] {
     display: inline-block;
     width: 1em;
     height: 1em;
@@ -144,58 +144,56 @@
     line-height: 1;
     position: relative;
     vertical-align: middle;
-}
+  }
 
-.navbar-item, .navbar-link {
-	color: #ffffff;
-}
+  .navbar-item,
+  .navbar-link {
+    color: #ffffff;
+  }
 
-.osm-caption-mobile
-{
-  width: 200px;
-}
+  .osm-caption-mobile {
+    width: 200px;
+  }
 
-.modal-card
-{
-  border: 5px solid hsl(0, 0%, 96%);
-  box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
-  border-radius: .25rem;
-}
-.footer-partners
-{
-  left: 0;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  z-index: 9;
-  min-height: 3.25rem;
-}
-.mapboxgl-ctrl-bottom-right, .maplibregl-ctrl-bottom-right
-{
-  bottom: 68px !important;
-}
-.add-button
-{
-  bottom: 72px !important;
-}
+  .modal-card {
+    border: 5px solid hsl(0, 0%, 96%);
+    box-shadow: 0 .5em 1em -.125em rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .02);
+    border-radius: .25rem;
+  }
 
-.attrib
-{
-  justify-content: flex-end;
-  margin-left: auto;
-  position:absolute;
-  align-items: stretch;
-  display: flex;
-  bottom:0;
-  right:0;
-}
+  .footer-partners {
+    left: 0;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: 9;
+    min-height: 3.25rem;
+  }
 
-.span-partners
-{
-  letter-spacing: .03em;
-}
+  .mapboxgl-ctrl-bottom-right,
+  .maplibregl-ctrl-bottom-right {
+    bottom: 68px !important;
+  }
 
-.image-gugik {
-  height: 58px;
-  width: 105px;
-}
+  .add-button {
+    bottom: 72px !important;
+  }
+
+  .attrib {
+    justify-content: flex-end;
+    margin-left: auto;
+    position: absolute;
+    align-items: stretch;
+    display: flex;
+    bottom: 0;
+    right: 0;
+  }
+
+  .span-partners {
+    letter-spacing: .03em;
+  }
+
+  .image-gugik {
+    height: 58px;
+    width: 105px;
+  }
