--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,10 @@
     padding: 0;
   }
 
+  .button[disabled] {
+    opacity: 0.7 !important;
+  }
+
   #map {
     position: absolute;
     top: 0;
@@ -196,17 +200,4 @@
   .image-gugik {
     height: 55px;
     width: 100px;
-  }
-
-  .button[disabled]
-  {
-    opacity: 0.7 !important;
-  }
-  #edit-poi:hover:after {
-    content:"Edytuj (iD)";
-    margin-left: 15px;
-  }
-  #preview-poi:hover:after {
-    content:"Podejrzyj w OSM";
-    margin-left: 15px;
   }
