new logo + change in aed form (description input)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -198,6 +198,11 @@
     width: 73px;
   }
 
+  .image-fundacja {
+    height: 40px;
+    width: 170px;
+  }
+
   .span-partners {
     font-size: 0.88em !important;
   }
