--- a/src/css/main.css
+++ b/src/css/main.css
@@ -261,3 +261,18 @@
     font-size: 0.8em !important;
   }
  
+.mapboxgl-ctrl-group, .maplibregl-ctrl-group
+{
+  background-color: #f8f8f8cc !important;
+}
+
+.mapboxgl-ctrl-group button, .maplibregl-ctrl-group button {
+  width: 44px !important;
+  height: 44px !important;
+}
+
+.mapboxgl-ctrl-zoom-in .mapboxgl-ctrl-icon,
+.mapboxgl-ctrl-zoom-out .mapboxgl-ctrl-icon,
+.mapboxgl-ctrl-geolocate {
+  filter: contrast(24%);
+}
