--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,9 +61,10 @@
       position: relative;
       float: right;
       right: 40px;
+      top: 50px;
       z-index: 1;
       margin: 0.5rem !important;
-      width: 425px;
+      width: 400px;
       border-radius: 10px;
       box-shadow: 0 .5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
       max-height: 90vh;
