--- a/web/css/main.css
+++ b/web/css/main.css
@@ -17,11 +17,47 @@
     opacity: 0.7 !important;
   }
 
-  #map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
+  .notification-banner > p > a {
+    color: #3ec487;
+  }
+
+  @media (max-width: 600px) {
+    .notification-banner {
+      background-color: rgb(255, 255, 157);
+      width: 100%;
+      height: 54px;
+      z-index: 1000;
+      padding: 4px;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+  @media (max-width: 600px) {
+    #map {
+      position: absolute;
+      top: 54px;
+      bottom: 0;
+      width: 100%;
+    }
+  }
+  @media (min-width: 600px) {
+    .notification-banner {
+      background-color: rgb(255, 255, 157);
+      width: 100%;
+      height: 32px;
+      z-index: 1000;
+      padding: 4px;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+  @media (min-width: 600px) {
+    #map {
+      position: absolute;
+      top: 32px;
+      bottom: 0;
+      width: 100%;
+    }
   }
 
   .delete {
